--- a/vignettes/Workflow.Rmd
+++ b/vignettes/Workflow.Rmd
@@ -13,7 +13,7 @@ Vignettes are long form documentation commonly included in packages. Because the
 
 ```{r}
 # test
-library(dark)
+library(Dark)
 data(dark)
 tmp<-dark
 names(tmp)
