--- a/vignettes/Workflow.Rmd
+++ b/vignettes/Workflow.Rmd
@@ -24,16 +24,44 @@ names(tmp)
 The function `Start` generates an array of possible parameter values calculated from the data, which are then passed to `ModelSelect`. The purpose of `ModelSelect` is to return parameter estimates and AIC scores. 
 
 
-```{r, fig.width=6, fig.height=6, fig.align='center'}
+```{r, fig.width=6, fig.height=6, fig.align='center', eval=FALSE}
 set.seed(1234)
 par(las=1, bty='n',mfrow=c(1,1))
 plot(tmp$time, tmp$thrs)
 
 P<-Start(tmp, 2000)
+```
+
+```{r, echo=FALSE} 
+print(structure(c(-1.93048394296102, -0.966243347355156, -0.990918795667905, 
+0.253616641335044, 0.420301711722179, 1.32959014056482, 3.97646484343339, 
+0.763150661132819, 0.905683974690625, -0.389894947473737, -0.4064032016008, 
+-0.182491245622811, 2.52208104052026, 6.96883941970985, 3.12198099049525, 
+0.130565282641321, 0.207403701850925, 0.0885442721360681, 32.5607121101566, 
+32.9919673191487, 29.4211741886944), .Dim = c(3L, 7L), .Dimnames = list(
+    NULL, c("CT", "CC", "Tau", "S2", "Alph", "S3", "Beta"))))
+```
+
+```{r, eval=FALSE}
 MSC<-ModelSelect(tmp,P)
 MSC
 tmp<-BestFit(tmp,MSC, T)
 ```
+
+```{r, echo=FALSE}
+print(structure(list(AIC = c(0, 0, -347.688152541027, 0, -353.337417397606, 
+-556.296993756504, -561.687551083725), param = structure(c(-7.03677859813905, 
+-4.84533369033486, -5.52767312215107, -1.97221068357342, 6.23084047079413, 
+4.01859727139177, 1.43155445018767, 1.39834034016783, 28.1212523680337, 
+17.2254594347471, 0.557811726205019, 1.62283784201578, 0, -0.0365810342284519, 
+9.61920222958987, -0.227896945728703, 0, 9.40371211032976, 3.50297041829524, 
+8.73599874809917, 0, 0, 0.0972021474126348, 0.180809685149208, 
+0, 0, 0, 19.4250494832971), .Dim = c(4L, 7L))), .Names = c("AIC", 
+"param"))
+)
+```
+
+
 
 A further function `MultiStart` ensures that the estimated parameter values are optimal by repeatedly optimising the model with starting locations in the vicinity of the initial estimate. Finally `BootDark` uses bootstrap methods to calculate confidence intervals for the parameter estimates.
 
