--- a/vignettes/parameter_exp.Rmd
+++ b/vignettes/parameter_exp.Rmd
@@ -24,8 +24,7 @@ The cone coefficient can be thought of as the cone threshold at the instant foll
 
 
 ```{r, fig.align='center', fig.width=8, fig.height=8, echo=FALSE}
-library(Dark)
-data(dark)
+load("dark.rda")
 tmp<-dark
   par(las = 1, bty = "n", 
       mfrow = c(1, 1), 
@@ -83,10 +82,8 @@ The linear (on a log-lin plot) rod phase S2 is described in detail in Lamb and P
 
 
 ```{r, fig.align='center', fig.width=8, fig.height=8, echo=FALSE}
-library(Dark)
-data(dark)
-source('~/GitHub/Dark/R/H.R')
-source('~/GitHub/Dark/R/P7c.R')
+source('../R/H.R')
+source('../R/P7c.R')
 tmp<-dark
   par(las = 1, bty = "n", 
       mfrow = c(1, 1), 
